# solstack

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: ticking.rs
examples/: guessing_game.rs
src/: lib.rs  macros.rs  main.rs  stack.rs  state.rs  trans.rs
tests/: callback_counting.rs  isolate.rs  none.rs  pop.rs  push.rs  quit.rs  replace.rs  shadow_tick.rs  trans_push.rs
